# redash-mcp

./: README.ja.md  README.md  env.sample  pyproject.toml
.github/workflows/: lint.yml  pr-body.yml
src/redash_mcp/: __init__.py  config.py  server.py
src/redash_mcp/api/: __init__.py  archive_dashboard.py  archive_query.py  create_dashboard.py  create_data_source.py  create_query.py  delete_data_source.py  execute_query.py  get_dashboard.py  get_data_source.py  get_data_source_schema.py  get_job.py  get_query.py  get_query_result.py  get_query_result_by_id.py  list_dashboards.py  list_data_source_types.py  list_data_sources.py  list_queries.py  test_data_source.py  update_dashboard.py  update_data_source.py  update_query.py
src/redash_mcp/tools/: __init__.py  archive_dashboard.py  archive_query.py  create_dashboard.py  create_data_source.py  create_query.py  delete_data_source.py  execute_query.py  get_dashboard.py  get_data_source.py  get_data_source_schema.py  get_job.py  get_query.py  get_query_result.py  get_query_result_by_id.py  list_dashboards.py  list_data_source_types.py  list_data_sources.py  list_queries.py  test_data_source.py  update_dashboard.py  update_data_source.py  update_query.py
